--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
 
     <div class="row content section-one section-three base-section">
-        <div class="col-md-5 col-sm-5 col-xs-12 desctiption-block animation mobile-elemen" data-av-animation="fadeInUp">
+        <div class="col-md-5 col-sm-5 col-xs-12 desctiption-block animation mobile-element" data-av-animation="fadeInUp">
             <div class="desctiption">
               <img class="logo" src="images/mohawk-logo.svg">
               <div class="text"><span>Reducing the drop-off for Dogiz</span>
