--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="col-md-5 col-sm-5 col-xs-12 desctiption-block animation mobile-element" data-av-animation="fadeInUp">
             <div class="desctiption">
               <img class="logo" src="images/mohawk-logo.svg">
-              <div class="text"><span>Reducing the drop-off for Dogiz</span>
+              <div class="text"><span>Brand identity system for Mohawk</span>
               </div>
               <div class="desktop-element">
                   <a class="content-btn" href="#">coming soon</a>
@@ -100,7 +100,7 @@
         <div class="col-md-5 col-sm-5 col-xs-12 desctiption-block animation desktop-element" data-av-animation="fadeInUp">
           <div class="desctiption">
             <img class="logo" src="images/mohawk-logo.svg">
-            <div class="text"><span>Reducing the drop-off for Dogiz</span>
+            <div class="text"><span>Brand identity system for Mohawk</span>
             </div>
             <div class="desktop-element">
                 <a class="content-btn" href="#">coming soon</a>
