Changed fonts, and imagesd

--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +23,7 @@
             Deeply diving into your business we turn design and creative energy into a system that works to achieve your business goals and objectives.
         </div>
         <div class="btn-block text-center animation" data-av-animation="fadeInUp">
-            <a href="#" class="base-btn">Contact Us</a>
+            <a href="#" class="base-btn">Lets Work Together</a>
           </div>
       </div>
     </div>
@@ -115,7 +113,7 @@
     <div class="row content section-four section-one base-section">
         <div class="col-md-5 col-sm-5 col-xs-12 desctiption-block animation" data-av-animation="fadeInUp">
             <div class="desctiption">
-              <img class="logo" src="images/velocy-logo.png">
+              <img class="logo" src="images/velocy-logo.svg">
               <div class="text"><span>User Interface design for Velocy</span>
               
               </div>
@@ -163,16 +161,16 @@
             </div>
           </div>
           <div class="col-md-12 btn-block animation"  data-av-animation="fadeInUp">
-            <a href="#" class="base-btn">Get In Touch</a>
+            <a href="mailto:hello@shortcute.xyz" class="base-btn">Get In Touch</a>
           </div>
         </div>
         <div class="social-icons">
           <div class="col-md-12">
             <ul class="social-list">
-              <li><a href="#"><img class="icons-dribbble" src="icons/icons-dribbble.svg"></a></li>
-              <li><a href="#"><img class="icons-behance" src="icons/icons-behance.svg"></a></li>
-              <li><a href="#"><img class="icons-insta" src="icons/icons-insta.svg"></a></li>
-              <li><a href="#"><img class="icons-fb" src="icons/icons-fb.svg"></a></li>
+              <li><a href="https://dribbble.com/shortcute" target="_blank"><img class="icons-dribbble" src="icons/icons-dribbble.svg"></a></li>
+              <li><a href="https://www.behance.net/shortcute" target="_blank"><img class="icons-behance" src="icons/icons-behance.svg"></a></li>
+              <li><a href="https://www.instagram.com/shortcutedesign/" target="_blank"><img class="icons-insta" src="icons/icons-insta.svg"></a></li>
+              <li><a href="https://www.facebook.com/shortcute.xyz" target="_blank"><img class="icons-fb" src="icons/icons-fb.svg"></a></li>
             </ul>
           </div>
         </div>
