--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             Deeply diving into your business we turn design and creative energy into a system that works to achieve your business goals and objectives.
         </div>
         <div class="btn-block text-center animation" data-av-animation="fadeInUp">
-            <a href="#" class="base-btn">Lets Work Together</a>
+            <a href="#" class="base-btn">Let's Work Together</a>
           </div>
       </div>
     </div>
@@ -129,6 +129,25 @@
         <div class="col-md-12 col-sm-12 col-xs-12 mobile-element text-center animation mobile-btn" data-av-animation="fadeInUp">
           <a class="content-btn black-btn" href="#">coming soon</a>
         </div>
+    </div>
+
+    <div class="desktop-menu">
+      <div class="menu-content">
+        <div class="col-md-12 text-center animation" data-av-animation="fadeInLeft">
+         <div class="menu-logo menu-block col-md-4">
+            <span>/shortcute</span>
+          </div>
+          <div class="menu-block col-md-8">
+            <ul class="menu-list">
+              <li><a href="#">Work</a></li>
+              <li><a href="#">Agency</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Career</a></li>
+              <li><a href="mailto:hello@shortcute.xyz" class="base-btn">Get In Touch</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="row content section-five base-section section-one">
