Changed animation for menu

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
     <div class="desktop-menu">
       <div class="menu-content">
-        <div class="col-md-12 text-center animation" data-av-animation="fadeInLeft">
+        <div class="col-md-12 text-center animation" data-av-animation="fadeInUp">
          <div class="menu-logo menu-block col-md-4">
             <span>/shortcute</span>
           </div>
