Added hover effects for menu

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
           </div>
           <div class="menu-block col-md-8">
             <ul class="menu-list">
-              <li><a href="#">Work</a></li>
-              <li><a href="#">Agency</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Career</a></li>
+              <li><a class="menu-link" href="#">Work</a></li>
+              <li><a class="menu-link" href="#">Agency</a></li>
+              <li><a class="menu-link" href="#">Blog</a></li>
+              <li><a class="menu-link" href="#">Career</a></li>
               <li><a href="mailto:hello@shortcute.xyz" class="base-btn">Get In Touch</a></li>
             </ul>
           </div>
